--- a/archives/toutiao-search/2023-10-20.md
+++ b/archives/toutiao-search/2023-10-20.md
@@ -1,64 +1,86 @@
 # 2023-10-20
 
-共 138 条
+共 159 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Oct 20 2023 10:13:42 GMT+0800 (China Standard Time) -->
-1. [37岁的智利总统有着怎样的传奇人生](https://so.toutiao.com/search?keyword=37岁的智利总统有着怎样的传奇人生)
+<!-- 最后更新时间 Fri Oct 20 2023 11:00:37 GMT+0800 (China Standard Time) -->
+1. [男生脚踹殴打女生 同学嘻哈围观](https://so.toutiao.com/search?keyword=男生脚踹殴打女生+同学嘻哈围观)
 1. [普京在京开记者会 出场满满中国风](https://so.toutiao.com/search?keyword=普京在京开记者会+出场满满中国风)
 1. [践行大食物观 端稳中国饭碗](https://so.toutiao.com/search?keyword=践行大食物观+端稳中国饭碗)
-1. [辽宁公安厅原厅长王大伟贪5.55亿受审](https://so.toutiao.com/search?keyword=辽宁公安厅原厅长王大伟贪5.55亿受审)
+1. [普京再度视察特别军事行动指挥部](https://so.toutiao.com/search?keyword=普京再度视察特别军事行动指挥部)
+1. [媒体评“不拴狗绳一律捕捉”](https://so.toutiao.com/search?keyword=媒体评“不拴狗绳一律捕捉”)
 1. [男子用1元拍到奔驰车却遭提车难](https://so.toutiao.com/search?keyword=男子用1元拍到奔驰车却遭提车难)
-1. [女白领住进山野探索开放式两性关系](https://so.toutiao.com/search?keyword=女白领住进山野探索开放式两性关系)
-1. [高校通报网传流浪狗被保安驱赶处置](https://so.toutiao.com/search?keyword=高校通报网传流浪狗被保安驱赶处置)
-1. [沪指跌0.33%失守3000点](https://so.toutiao.com/search?keyword=沪指跌0.33%失守3000点)
-1. [湖北一化粪池发生意外致5人死亡](https://so.toutiao.com/search?keyword=湖北一化粪池发生意外致5人死亡)
+1. [辽宁公安厅原厅长王大伟贪5.55亿受审](https://so.toutiao.com/search?keyword=辽宁公安厅原厅长王大伟贪5.55亿受审)
 1. [刘芳菲发文回应从央视离职](https://so.toutiao.com/search?keyword=刘芳菲发文回应从央视离职)
-1. [北京等地拟取消教师编制？官方辟谣](https://so.toutiao.com/search?keyword=北京等地拟取消教师编制？官方辟谣)
+1. [湖北一化粪池发生意外致5人死亡](https://so.toutiao.com/search?keyword=湖北一化粪池发生意外致5人死亡)
+1. [工信部部长金壮龙会见苹果CEO库克](https://so.toutiao.com/search?keyword=工信部部长金壮龙会见苹果CEO库克)
 1. [多国民众集会支持巴勒斯坦人民](https://so.toutiao.com/search?keyword=多国民众集会支持巴勒斯坦人民)
+1. [吃头孢能治支原体肺炎？谣言](https://so.toutiao.com/search?keyword=吃头孢能治支原体肺炎？谣言)
 1. [巴以冲突震动岛内蔡英文竟叫嚣备战](https://so.toutiao.com/search?keyword=巴以冲突震动岛内蔡英文竟叫嚣备战)
+1. [专家谈以色列是否具备地面打击能力](https://so.toutiao.com/search?keyword=专家谈以色列是否具备地面打击能力)
+1. [沪指跌0.33%失守3000点](https://so.toutiao.com/search?keyword=沪指跌0.33%失守3000点)
+1. [美军击落从也门发射的导弹和无人机](https://so.toutiao.com/search?keyword=美军击落从也门发射的导弹和无人机)
 1. [离开央视的主持人都去哪了](https://so.toutiao.com/search?keyword=离开央视的主持人都去哪了)
-1. [14岁男孩凌晨口渴误喝百草枯](https://so.toutiao.com/search?keyword=14岁男孩凌晨口渴误喝百草枯)
-1. [张馨予发声：文明养狗是关键](https://so.toutiao.com/search?keyword=张馨予发声：文明养狗是关键)
-1. [奶奶护娃被恶犬撕咬 曾有人多次喂狗](https://so.toutiao.com/search?keyword=奶奶护娃被恶犬撕咬+曾有人多次喂狗)
+1. [妈妈把运动员的水杯抢来给自己孩子](https://so.toutiao.com/search?keyword=妈妈把运动员的水杯抢来给自己孩子)
+1. [油价下周二迎来调整](https://so.toutiao.com/search?keyword=油价下周二迎来调整)
+1. [内蒙古火车撞人致2死 画面曝光](https://so.toutiao.com/search?keyword=内蒙古火车撞人致2死+画面曝光)
+1. [出租车公司回应宝马撞车事故](https://so.toutiao.com/search?keyword=出租车公司回应宝马撞车事故)
 1. [水均益女儿水亦诗从央视离职](https://so.toutiao.com/search?keyword=水均益女儿水亦诗从央视离职)
+1. [韩勇曾进驻云南督导孙小果案](https://so.toutiao.com/search?keyword=韩勇曾进驻云南督导孙小果案)
+1. [A股再战3000点 这一次有何不同](https://so.toutiao.com/search?keyword=A股再战3000点+这一次有何不同)
+1. [日方对巴以决议草案未通过表示遗憾](https://so.toutiao.com/search?keyword=日方对巴以决议草案未通过表示遗憾)
+1. [新华社评“侧卧式”干部](https://so.toutiao.com/search?keyword=新华社评“侧卧式”干部)
+1. [布林肯被曝向美国驻外外交机构发函](https://so.toutiao.com/search?keyword=布林肯被曝向美国驻外外交机构发函)
+1. [婴儿被拔倒刺为何心脏衰竭？医生解读](https://so.toutiao.com/search?keyword=婴儿被拔倒刺为何心脏衰竭？医生解读)
+1. [原山西地税局局长退休1年多被查](https://so.toutiao.com/search?keyword=原山西地税局局长退休1年多被查)
+1. [花鼓戏演员被两男子非礼 丈夫发声](https://so.toutiao.com/search?keyword=花鼓戏演员被两男子非礼+丈夫发声)
+1. [14岁男孩凌晨口渴误喝百草枯](https://so.toutiao.com/search?keyword=14岁男孩凌晨口渴误喝百草枯)
+1. [女白领住进山野探索开放式两性关系](https://so.toutiao.com/search?keyword=女白领住进山野探索开放式两性关系)
+1. [巴以战地日记系列](https://so.toutiao.com/search?keyword=巴以战地日记系列)
+1. [美联储主席鲍威尔：FOMC正谨慎行事](https://so.toutiao.com/search?keyword=美联储主席鲍威尔：FOMC正谨慎行事)
+1. [倒刺伤害到底有多“深”](https://so.toutiao.com/search?keyword=倒刺伤害到底有多“深”)
+1. [美欧在峰会前因中国议题分歧不断](https://so.toutiao.com/search?keyword=美欧在峰会前因中国议题分歧不断)
+1. [马斯克：特斯拉将坚持继续降价](https://so.toutiao.com/search?keyword=马斯克：特斯拉将坚持继续降价)
+1. [律师谈上海要求物业劝阻不文明养狗](https://so.toutiao.com/search?keyword=律师谈上海要求物业劝阻不文明养狗)
+1. [多国盘点参加“一带一路”论坛收获](https://so.toutiao.com/search?keyword=多国盘点参加“一带一路”论坛收获)
+1. [天津一儿童疑遭开门杀后被公交碾压](https://so.toutiao.com/search?keyword=天津一儿童疑遭开门杀后被公交碾压)
+1. [奶奶护娃被恶犬撕咬 曾有人多次喂狗](https://so.toutiao.com/search?keyword=奶奶护娃被恶犬撕咬+曾有人多次喂狗)
+1. [加拿大科幻教父点赞中国](https://so.toutiao.com/search?keyword=加拿大科幻教父点赞中国)
+1. [黄渤周迅新片建议未满18岁谨慎观看](https://so.toutiao.com/search?keyword=黄渤周迅新片建议未满18岁谨慎观看)
+1. [女孩自制计算器租同学一天赚20多元](https://so.toutiao.com/search?keyword=女孩自制计算器租同学一天赚20多元)
+1. [狗未拴绳要被带走 老人坐地哭泣](https://so.toutiao.com/search?keyword=狗未拴绳要被带走+老人坐地哭泣)
+1. [李亚鹏因拒付4000万被限制高消费](https://so.toutiao.com/search?keyword=李亚鹏因拒付4000万被限制高消费)
+1. [多个落马官员“美容腐败”细节](https://so.toutiao.com/search?keyword=多个落马官员“美容腐败”细节)
+1. [美多个大学因“反以”被威胁撤捐助](https://so.toutiao.com/search?keyword=美多个大学因“反以”被威胁撤捐助)
+1. [老人带男童回家被恶狗撕咬3分钟](https://so.toutiao.com/search?keyword=老人带男童回家被恶狗撕咬3分钟)
+1. [驻英大使：强烈谴责英方的无端指责](https://so.toutiao.com/search?keyword=驻英大使：强烈谴责英方的无端指责)
+1. [37岁的智利总统有着怎样的传奇人生](https://so.toutiao.com/search?keyword=37岁的智利总统有着怎样的传奇人生)
+1. [高校通报网传流浪狗被保安驱赶处置](https://so.toutiao.com/search?keyword=高校通报网传流浪狗被保安驱赶处置)
+1. [北京等地拟取消教师编制？官方辟谣](https://so.toutiao.com/search?keyword=北京等地拟取消教师编制？官方辟谣)
+1. [张馨予发声：文明养狗是关键](https://so.toutiao.com/search?keyword=张馨予发声：文明养狗是关键)
 1. [媒体：失踪女童遇难为家长敲响警钟](https://so.toutiao.com/search?keyword=媒体：失踪女童遇难为家长敲响警钟)
 1. [网传陈丹青上海骑车被罚款](https://so.toutiao.com/search?keyword=网传陈丹青上海骑车被罚款)
 1. [宝马侧翻起火 身亡司机身份曝光](https://so.toutiao.com/search?keyword=宝马侧翻起火+身亡司机身份曝光)
-1. [内蒙古火车撞人致2死 画面曝光](https://so.toutiao.com/search?keyword=内蒙古火车撞人致2死+画面曝光)
 1. [山东辅警摩托车驾驶比武](https://so.toutiao.com/search?keyword=山东辅警摩托车驾驶比武)
 1. [宝马侧翻当事出租车行车记录仪曝光](https://so.toutiao.com/search?keyword=宝马侧翻当事出租车行车记录仪曝光)
-1. [新华社评“侧卧式”干部](https://so.toutiao.com/search?keyword=新华社评“侧卧式”干部)
-1. [花鼓戏演员被两男子非礼 丈夫发声](https://so.toutiao.com/search?keyword=花鼓戏演员被两男子非礼+丈夫发声)
-1. [出租车公司回应宝马撞车事故](https://so.toutiao.com/search?keyword=出租车公司回应宝马撞车事故)
 1. [苏起：蔡英文把台湾带到存亡边缘](https://so.toutiao.com/search?keyword=苏起：蔡英文把台湾带到存亡边缘)
-1. [妈妈把运动员的水杯抢来给自己孩子](https://so.toutiao.com/search?keyword=妈妈把运动员的水杯抢来给自己孩子)
 1. [深市公司深度参与“一带一路”建设](https://so.toutiao.com/search?keyword=深市公司深度参与“一带一路”建设)
 1. [网友乘地铁发现警犬已戴上嘴套](https://so.toutiao.com/search?keyword=网友乘地铁发现警犬已戴上嘴套)
 1. [广东等地启动农业重大灾害四级响应](https://so.toutiao.com/search?keyword=广东等地启动农业重大灾害四级响应)
 1. [金正恩会见俄外长 谈话超过一小时](https://so.toutiao.com/search?keyword=金正恩会见俄外长+谈话超过一小时)
-1. [婴儿被拔倒刺为何心脏衰竭？医生解读](https://so.toutiao.com/search?keyword=婴儿被拔倒刺为何心脏衰竭？医生解读)
 1. [阿奇霉素市场需求火爆 医生提醒](https://so.toutiao.com/search?keyword=阿奇霉素市场需求火爆+医生提醒)
 1. [台媒：“一带一路”悄悄改变了地球](https://so.toutiao.com/search?keyword=台媒：“一带一路”悄悄改变了地球)
 1. [李月汝贝西克塔斯第二战拿到8分7板](https://so.toutiao.com/search?keyword=李月汝贝西克塔斯第二战拿到8分7板)
 1. [朝鲜设宴款待俄罗斯外长拉夫罗夫](https://so.toutiao.com/search?keyword=朝鲜设宴款待俄罗斯外长拉夫罗夫)
-1. [马斯克：特斯拉将坚持继续降价](https://so.toutiao.com/search?keyword=马斯克：特斯拉将坚持继续降价)
-1. [黄渤周迅新片建议未满18岁谨慎观看](https://so.toutiao.com/search?keyword=黄渤周迅新片建议未满18岁谨慎观看)
 1. [问界M9实拍 预计售价50万起](https://so.toutiao.com/search?keyword=问界M9实拍+预计售价50万起)
 1. [特斯拉三季度净利润降44%](https://so.toutiao.com/search?keyword=特斯拉三季度净利润降44%)
-1. [狗未拴绳要被带走 老人坐地哭泣](https://so.toutiao.com/search?keyword=狗未拴绳要被带走+老人坐地哭泣)
-1. [倒刺伤害到底有多“深”](https://so.toutiao.com/search?keyword=倒刺伤害到底有多“深”)
 1. [一车辆在高速路匝道逆向借道超车](https://so.toutiao.com/search?keyword=一车辆在高速路匝道逆向借道超车)
 1. [美国称俄已“战败”？普京：真好笑](https://so.toutiao.com/search?keyword=美国称俄已“战败”？普京：真好笑)
-1. [老人带男童回家被恶狗撕咬3分钟](https://so.toutiao.com/search?keyword=老人带男童回家被恶狗撕咬3分钟)
 1. [游客投喂可可西里网红狼](https://so.toutiao.com/search?keyword=游客投喂可可西里网红狼)
-1. [女孩自制计算器租同学一天赚20多元](https://so.toutiao.com/search?keyword=女孩自制计算器租同学一天赚20多元)
 1. [男子取现451万 柜员发现异常后报警](https://so.toutiao.com/search?keyword=男子取现451万+柜员发现异常后报警)
 1. [伊拉克民兵武装称将打击美军事基地](https://so.toutiao.com/search?keyword=伊拉克民兵武装称将打击美军事基地)
 1. [智能导盲犬亮相亚残运会火炬传递](https://so.toutiao.com/search?keyword=智能导盲犬亮相亚残运会火炬传递)
 1. [加沙地带残骸遍地](https://so.toutiao.com/search?keyword=加沙地带残骸遍地)
-1. [油价下周二迎来调整](https://so.toutiao.com/search?keyword=油价下周二迎来调整)
-1. [多个落马官员“美容腐败”细节](https://so.toutiao.com/search?keyword=多个落马官员“美容腐败”细节)
 1. [央企在“一带一路”投资超万亿美元](https://so.toutiao.com/search?keyword=央企在“一带一路”投资超万亿美元)
 1. [菲律宾：与台湾地区无军事接触](https://so.toutiao.com/search?keyword=菲律宾：与台湾地区无军事接触)
 1. [女子为改善夫妻关系买甘露水被骗](https://so.toutiao.com/search?keyword=女子为改善夫妻关系买甘露水被骗)
@@ -91,7 +113,6 @@
 1. [交警辟谣车内人被气囊弹射破窗而出](https://so.toutiao.com/search?keyword=交警辟谣车内人被气囊弹射破窗而出)
 1. [美国专家：美联储可能需要做得更多](https://so.toutiao.com/search?keyword=美国专家：美联储可能需要做得更多)
 1. [台民调：近六成民众同意下架民进党](https://so.toutiao.com/search?keyword=台民调：近六成民众同意下架民进党)
-1. [天津一儿童疑遭开门杀后被公交碾压](https://so.toutiao.com/search?keyword=天津一儿童疑遭开门杀后被公交碾压)
 1. [以色列特拉维夫响起火箭弹防空警报](https://so.toutiao.com/search?keyword=以色列特拉维夫响起火箭弹防空警报)
 1. [中国式签单效率](https://so.toutiao.com/search?keyword=中国式签单效率)
 1. [美加州州长将率团访华 中方：欢迎](https://so.toutiao.com/search?keyword=美加州州长将率团访华+中方：欢迎)
