--- a/archives/toutiao-search/2023-10-20.md
+++ b/archives/toutiao-search/2023-10-20.md
@@ -1,52 +1,74 @@
 # 2023-10-20
 
-共 183 条
+共 198 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Oct 20 2023 12:00:36 GMT+0800 (China Standard Time) -->
-1. [两名儿童酒店门口避雨被保安驱赶](https://so.toutiao.com/search?keyword=两名儿童酒店门口避雨被保安驱赶)
+<!-- 最后更新时间 Fri Oct 20 2023 13:00:40 GMT+0800 (China Standard Time) -->
+1. [普京在京开记者会 出场满满中国风](https://so.toutiao.com/search?keyword=普京在京开记者会+出场满满中国风)
 1. [A股再战3000点 这一次有何不同](https://so.toutiao.com/search?keyword=A股再战3000点+这一次有何不同)
 1. [3项“考古中国”项目取得重要进展](https://so.toutiao.com/search?keyword=3项“考古中国”项目取得重要进展)
-1. [网友：智利总统来找我买水晶了](https://so.toutiao.com/search?keyword=网友：智利总统来找我买水晶了)
-1. [普京在京开记者会 出场满满中国风](https://so.toutiao.com/search?keyword=普京在京开记者会+出场满满中国风)
-1. [刑法专家谈狗咬女童：不应搞株连](https://so.toutiao.com/search?keyword=刑法专家谈狗咬女童：不应搞株连)
-1. [律师：抢运动员水杯女子构成抢夺罪](https://so.toutiao.com/search?keyword=律师：抢运动员水杯女子构成抢夺罪)
 1. [村干部为何频繁催交新农合](https://so.toutiao.com/search?keyword=村干部为何频繁催交新农合)
-1. [美一男子欲自杀与警察交谈后被打死](https://so.toutiao.com/search?keyword=美一男子欲自杀与警察交谈后被打死)
-1. [男子用1元拍到奔驰车却遭提车难](https://so.toutiao.com/search?keyword=男子用1元拍到奔驰车却遭提车难)
+1. [网友：智利总统来找我买水晶了](https://so.toutiao.com/search?keyword=网友：智利总统来找我买水晶了)
+1. [媒体：碧桂园求解境外债困局](https://so.toutiao.com/search?keyword=媒体：碧桂园求解境外债困局)
+1. [美方又炒“中国有超500枚核弹头”](https://so.toutiao.com/search?keyword=美方又炒“中国有超500枚核弹头”)
+1. [律师：抢运动员水杯女子构成抢夺罪](https://so.toutiao.com/search?keyword=律师：抢运动员水杯女子构成抢夺罪)
+1. [翻护网进轨道被撞身亡两人系夫妻](https://so.toutiao.com/search?keyword=翻护网进轨道被撞身亡两人系夫妻)
+1. [特斯拉市值一夜蒸发5239亿元](https://so.toutiao.com/search?keyword=特斯拉市值一夜蒸发5239亿元)
 1. [巴以冲突震动岛内蔡英文竟叫嚣备战](https://so.toutiao.com/search?keyword=巴以冲突震动岛内蔡英文竟叫嚣备战)
 1. [吃头孢能治支原体肺炎？谣言](https://so.toutiao.com/search?keyword=吃头孢能治支原体肺炎？谣言)
 1. [哈马斯称目前未有任何援助进入加沙](https://so.toutiao.com/search?keyword=哈马斯称目前未有任何援助进入加沙)
-1. [专家谈以色列是否具备地面打击能力](https://so.toutiao.com/search?keyword=专家谈以色列是否具备地面打击能力)
+1. [美军击落从也门发射的导弹和无人机](https://so.toutiao.com/search?keyword=美军击落从也门发射的导弹和无人机)
 1. [加沙地带残骸遍地](https://so.toutiao.com/search?keyword=加沙地带残骸遍地)
-1. [离开央视的主持人都去哪了](https://so.toutiao.com/search?keyword=离开央视的主持人都去哪了)
-1. [以色列从中东多国撤离使馆人员](https://so.toutiao.com/search?keyword=以色列从中东多国撤离使馆人员)
 1. [沪指跌0.33%失守3000点](https://so.toutiao.com/search?keyword=沪指跌0.33%失守3000点)
-1. [嘲讽50岁顾客主播因拒绝道歉被开除](https://so.toutiao.com/search?keyword=嘲讽50岁顾客主播因拒绝道歉被开除)
-1. [官方通报五年级男生踢打两名女生](https://so.toutiao.com/search?keyword=官方通报五年级男生踢打两名女生)
+1. [女孩自制计算器租同学一天赚20多元](https://so.toutiao.com/search?keyword=女孩自制计算器租同学一天赚20多元)
+1. [男子用1元拍到奔驰车却遭提车难](https://so.toutiao.com/search?keyword=男子用1元拍到奔驰车却遭提车难)
+1. [午评：沪指跌0.27%失守3000点](https://so.toutiao.com/search?keyword=午评：沪指跌0.27%失守3000点)
+1. [油价下周二迎来调整](https://so.toutiao.com/search?keyword=油价下周二迎来调整)
 1. [出租车公司回应宝马撞车事故](https://so.toutiao.com/search?keyword=出租车公司回应宝马撞车事故)
-1. [湖北一化粪池发生意外致5人死亡](https://so.toutiao.com/search?keyword=湖北一化粪池发生意外致5人死亡)
-1. [媒体：碧桂园求解境外债困局](https://so.toutiao.com/search?keyword=媒体：碧桂园求解境外债困局)
-1. [刘芳菲发文回应从央视离职](https://so.toutiao.com/search?keyword=刘芳菲发文回应从央视离职)
-1. [中央气象台继续发布台风蓝色预警](https://so.toutiao.com/search?keyword=中央气象台继续发布台风蓝色预警)
-1. [普京再度视察特别军事行动指挥部](https://so.toutiao.com/search?keyword=普京再度视察特别军事行动指挥部)
-1. [内蒙古火车撞人致2死 画面曝光](https://so.toutiao.com/search?keyword=内蒙古火车撞人致2死+画面曝光)
+1. [离开央视的主持人都去哪了](https://so.toutiao.com/search?keyword=离开央视的主持人都去哪了)
 1. [14岁男孩凌晨口渴误喝百草枯](https://so.toutiao.com/search?keyword=14岁男孩凌晨口渴误喝百草枯)
+1. [湖北一化粪池发生意外致5人死亡](https://so.toutiao.com/search?keyword=湖北一化粪池发生意外致5人死亡)
+1. [刘芳菲发文回应从央视离职](https://so.toutiao.com/search?keyword=刘芳菲发文回应从央视离职)
+1. [游客投喂可可西里网红狼](https://so.toutiao.com/search?keyword=游客投喂可可西里网红狼)
+1. [两名儿童酒店门口避雨被保安驱赶](https://so.toutiao.com/search?keyword=两名儿童酒店门口避雨被保安驱赶)
+1. [嘲讽50岁顾客主播因拒绝道歉被开除](https://so.toutiao.com/search?keyword=嘲讽50岁顾客主播因拒绝道歉被开除)
+1. [黄渤周迅新片建议未满18岁谨慎观看](https://so.toutiao.com/search?keyword=黄渤周迅新片建议未满18岁谨慎观看)
+1. [幼儿园萌娃集体扒苞米场面堪比秋收](https://so.toutiao.com/search?keyword=幼儿园萌娃集体扒苞米场面堪比秋收)
+1. [极氪回应车辆高速撞死行人](https://so.toutiao.com/search?keyword=极氪回应车辆高速撞死行人)
+1. [奶奶护娃被恶犬撕咬 曾有人多次喂狗](https://so.toutiao.com/search?keyword=奶奶护娃被恶犬撕咬+曾有人多次喂狗)
+1. [长春一公交车失控撞向多辆轿车](https://so.toutiao.com/search?keyword=长春一公交车失控撞向多辆轿车)
+1. [内蒙古火车撞人致2死 画面曝光](https://so.toutiao.com/search?keyword=内蒙古火车撞人致2死+画面曝光)
+1. [S13瑞士轮首日中国战队全胜](https://so.toutiao.com/search?keyword=S13瑞士轮首日中国战队全胜)
+1. [定远靖远来远3艘甲午沉舰被发现](https://so.toutiao.com/search?keyword=定远靖远来远3艘甲午沉舰被发现)
+1. [专家谈为什么教培行业必须“死”](https://so.toutiao.com/search?keyword=专家谈为什么教培行业必须“死”)
+1. [普京再度视察特别军事行动指挥部](https://so.toutiao.com/search?keyword=普京再度视察特别军事行动指挥部)
+1. [多个落马官员“美容腐败”细节](https://so.toutiao.com/search?keyword=多个落马官员“美容腐败”细节)
+1. [马斯克：特斯拉将坚持继续降价](https://so.toutiao.com/search?keyword=马斯克：特斯拉将坚持继续降价)
+1. [他国倡议针对一带一路？王毅回应](https://so.toutiao.com/search?keyword=他国倡议针对一带一路？王毅回应)
+1. [Meta规定“禁止赞扬哈马斯”](https://so.toutiao.com/search?keyword=Meta规定“禁止赞扬哈马斯”)
+1. [媒体评游客黄果树瀑布拍照遭阻拦](https://so.toutiao.com/search?keyword=媒体评游客黄果树瀑布拍照遭阻拦)
+1. [别克E5先锋版上市 售16.99万元](https://so.toutiao.com/search?keyword=别克E5先锋版上市+售16.99万元)
+1. [华为六周内售出160万部Mate60Pro](https://so.toutiao.com/search?keyword=华为六周内售出160万部Mate60Pro)
+1. [日媒：美元油价双升威胁市场稳定](https://so.toutiao.com/search?keyword=日媒：美元油价双升威胁市场稳定)
+1. [美加州州长将率团访华 中方：欢迎](https://so.toutiao.com/search?keyword=美加州州长将率团访华+中方：欢迎)
+1. [日媒称iPhone 15在中国“苦战”](https://so.toutiao.com/search?keyword=日媒称iPhone+15在中国“苦战”)
+1. [美官员：向地中海派航母为撤离平民](https://so.toutiao.com/search?keyword=美官员：向地中海派航母为撤离平民)
+1. [老人带男童回家被恶狗撕咬3分钟](https://so.toutiao.com/search?keyword=老人带男童回家被恶狗撕咬3分钟)
+1. [刑法专家谈狗咬女童：不应搞株连](https://so.toutiao.com/search?keyword=刑法专家谈狗咬女童：不应搞株连)
+1. [美一男子欲自杀与警察交谈后被打死](https://so.toutiao.com/search?keyword=美一男子欲自杀与警察交谈后被打死)
+1. [专家谈以色列是否具备地面打击能力](https://so.toutiao.com/search?keyword=专家谈以色列是否具备地面打击能力)
+1. [以色列从中东多国撤离使馆人员](https://so.toutiao.com/search?keyword=以色列从中东多国撤离使馆人员)
+1. [官方通报五年级男生踢打两名女生](https://so.toutiao.com/search?keyword=官方通报五年级男生踢打两名女生)
+1. [中央气象台继续发布台风蓝色预警](https://so.toutiao.com/search?keyword=中央气象台继续发布台风蓝色预警)
 1. [新华社评“侧卧式”干部](https://so.toutiao.com/search?keyword=新华社评“侧卧式”干部)
 1. [韩勇曾进驻云南督导孙小果案](https://so.toutiao.com/search?keyword=韩勇曾进驻云南督导孙小果案)
-1. [多个落马官员“美容腐败”细节](https://so.toutiao.com/search?keyword=多个落马官员“美容腐败”细节)
 1. [土耳其多个城市爆发反以色列游行](https://so.toutiao.com/search?keyword=土耳其多个城市爆发反以色列游行)
-1. [黄渤周迅新片建议未满18岁谨慎观看](https://so.toutiao.com/search?keyword=黄渤周迅新片建议未满18岁谨慎观看)
 1. [韩执政党支持率创新低 尹锡悦回应](https://so.toutiao.com/search?keyword=韩执政党支持率创新低+尹锡悦回应)
-1. [马斯克：特斯拉将坚持继续降价](https://so.toutiao.com/search?keyword=马斯克：特斯拉将坚持继续降价)
 1. [广东茂名暴雨学校停课](https://so.toutiao.com/search?keyword=广东茂名暴雨学校停课)
 1. [泰国总理谈“一带一路”论坛](https://so.toutiao.com/search?keyword=泰国总理谈“一带一路”论坛)
-1. [美方又炒“中国有超500枚核弹头”](https://so.toutiao.com/search?keyword=美方又炒“中国有超500枚核弹头”)
 1. [媒体：“中国经济衰退论”可休矣](https://so.toutiao.com/search?keyword=媒体：“中国经济衰退论”可休矣)
 1. [警方回应女子产后疑被婆家逼至跳楼](https://so.toutiao.com/search?keyword=警方回应女子产后疑被婆家逼至跳楼)
 1. [花鼓戏演员被两男子非礼 丈夫发声](https://so.toutiao.com/search?keyword=花鼓戏演员被两男子非礼+丈夫发声)
-1. [女孩自制计算器租同学一天赚20多元](https://so.toutiao.com/search?keyword=女孩自制计算器租同学一天赚20多元)
-1. [定远靖远来远3艘甲午沉舰被发现](https://so.toutiao.com/search?keyword=定远靖远来远3艘甲午沉舰被发现)
 1. [女白领住进山野探索开放式两性关系](https://so.toutiao.com/search?keyword=女白领住进山野探索开放式两性关系)
 1. [农业执法大队检查农机驾驶证引争议](https://so.toutiao.com/search?keyword=农业执法大队检查农机驾驶证引争议)
 1. [永乐桥见证创新高地在海河畔崛起](https://so.toutiao.com/search?keyword=永乐桥见证创新高地在海河畔崛起)
@@ -60,9 +82,7 @@
 1. [辽宁公安厅原厅长王大伟贪5.55亿受审](https://so.toutiao.com/search?keyword=辽宁公安厅原厅长王大伟贪5.55亿受审)
 1. [工信部部长金壮龙会见苹果CEO库克](https://so.toutiao.com/search?keyword=工信部部长金壮龙会见苹果CEO库克)
 1. [多国民众集会支持巴勒斯坦人民](https://so.toutiao.com/search?keyword=多国民众集会支持巴勒斯坦人民)
-1. [美军击落从也门发射的导弹和无人机](https://so.toutiao.com/search?keyword=美军击落从也门发射的导弹和无人机)
 1. [妈妈把运动员的水杯抢来给自己孩子](https://so.toutiao.com/search?keyword=妈妈把运动员的水杯抢来给自己孩子)
-1. [油价下周二迎来调整](https://so.toutiao.com/search?keyword=油价下周二迎来调整)
 1. [水均益女儿水亦诗从央视离职](https://so.toutiao.com/search?keyword=水均益女儿水亦诗从央视离职)
 1. [日方对巴以决议草案未通过表示遗憾](https://so.toutiao.com/search?keyword=日方对巴以决议草案未通过表示遗憾)
 1. [布林肯被曝向美国驻外外交机构发函](https://so.toutiao.com/search?keyword=布林肯被曝向美国驻外外交机构发函)
@@ -75,12 +95,10 @@
 1. [律师谈上海要求物业劝阻不文明养狗](https://so.toutiao.com/search?keyword=律师谈上海要求物业劝阻不文明养狗)
 1. [多国盘点参加“一带一路”论坛收获](https://so.toutiao.com/search?keyword=多国盘点参加“一带一路”论坛收获)
 1. [天津一儿童疑遭开门杀后被公交碾压](https://so.toutiao.com/search?keyword=天津一儿童疑遭开门杀后被公交碾压)
-1. [奶奶护娃被恶犬撕咬 曾有人多次喂狗](https://so.toutiao.com/search?keyword=奶奶护娃被恶犬撕咬+曾有人多次喂狗)
 1. [加拿大科幻教父点赞中国](https://so.toutiao.com/search?keyword=加拿大科幻教父点赞中国)
 1. [狗未拴绳要被带走 老人坐地哭泣](https://so.toutiao.com/search?keyword=狗未拴绳要被带走+老人坐地哭泣)
 1. [李亚鹏因拒付4000万被限制高消费](https://so.toutiao.com/search?keyword=李亚鹏因拒付4000万被限制高消费)
 1. [美多个大学因“反以”被威胁撤捐助](https://so.toutiao.com/search?keyword=美多个大学因“反以”被威胁撤捐助)
-1. [老人带男童回家被恶狗撕咬3分钟](https://so.toutiao.com/search?keyword=老人带男童回家被恶狗撕咬3分钟)
 1. [驻英大使：强烈谴责英方的无端指责](https://so.toutiao.com/search?keyword=驻英大使：强烈谴责英方的无端指责)
 1. [37岁的智利总统有着怎样的传奇人生](https://so.toutiao.com/search?keyword=37岁的智利总统有着怎样的传奇人生)
 1. [高校通报网传流浪狗被保安驱赶处置](https://so.toutiao.com/search?keyword=高校通报网传流浪狗被保安驱赶处置)
@@ -104,7 +122,6 @@
 1. [特斯拉三季度净利润降44%](https://so.toutiao.com/search?keyword=特斯拉三季度净利润降44%)
 1. [一车辆在高速路匝道逆向借道超车](https://so.toutiao.com/search?keyword=一车辆在高速路匝道逆向借道超车)
 1. [美国称俄已“战败”？普京：真好笑](https://so.toutiao.com/search?keyword=美国称俄已“战败”？普京：真好笑)
-1. [游客投喂可可西里网红狼](https://so.toutiao.com/search?keyword=游客投喂可可西里网红狼)
 1. [男子取现451万 柜员发现异常后报警](https://so.toutiao.com/search?keyword=男子取现451万+柜员发现异常后报警)
 1. [伊拉克民兵武装称将打击美军事基地](https://so.toutiao.com/search?keyword=伊拉克民兵武装称将打击美军事基地)
 1. [智能导盲犬亮相亚残运会火炬传递](https://so.toutiao.com/search?keyword=智能导盲犬亮相亚残运会火炬传递)
@@ -130,7 +147,6 @@
 1. [拜登访问以色列返美后将发表讲话](https://so.toutiao.com/search?keyword=拜登访问以色列返美后将发表讲话)
 1. [82岁老人翻护栏被撞飞身亡](https://so.toutiao.com/search?keyword=82岁老人翻护栏被撞飞身亡)
 1. [比亚迪宣布正式进入匈牙利](https://so.toutiao.com/search?keyword=比亚迪宣布正式进入匈牙利)
-1. [媒体评游客黄果树瀑布拍照遭阻拦](https://so.toutiao.com/search?keyword=媒体评游客黄果树瀑布拍照遭阻拦)
 1. [男子遛禁养犬被查后带狗飞奔](https://so.toutiao.com/search?keyword=男子遛禁养犬被查后带狗飞奔)
 1. [三任辽宁公安厅厅长受贿都超亿元](https://so.toutiao.com/search?keyword=三任辽宁公安厅厅长受贿都超亿元)
 1. [一带一路峰会各国领导人的休息时间](https://so.toutiao.com/search?keyword=一带一路峰会各国领导人的休息时间)
@@ -141,7 +157,6 @@
 1. [台民调：近六成民众同意下架民进党](https://so.toutiao.com/search?keyword=台民调：近六成民众同意下架民进党)
 1. [以色列特拉维夫响起火箭弹防空警报](https://so.toutiao.com/search?keyword=以色列特拉维夫响起火箭弹防空警报)
 1. [中国式签单效率](https://so.toutiao.com/search?keyword=中国式签单效率)
-1. [美加州州长将率团访华 中方：欢迎](https://so.toutiao.com/search?keyword=美加州州长将率团访华+中方：欢迎)
 1. [江西德兴惊现南宋时期珍贵文物](https://so.toutiao.com/search?keyword=江西德兴惊现南宋时期珍贵文物)
 1. [网友画图解读广州出租撞宝马过程](https://so.toutiao.com/search?keyword=网友画图解读广州出租撞宝马过程)
 1. [博主：戴琳总计执行标的超350万元](https://so.toutiao.com/search?keyword=博主：戴琳总计执行标的超350万元)
